- Added shortcuts, on floor 3 there is a stairway to a new (unfinished) tomb area with a different tileset
- Reputation system that affects certain enemy spawn rates
- New rope themed enemies that appear more often if you annoy the rope goddess
- New spell: Ice Breath, creates icicles that deal damage
- New spell: Incinerate, deals damage over time in a 3x3 area
- Added a new spooky illusion Enemy
- New enemies: samurai, ninjas, mummies
- new bolt cutters weapon
- Some doors have a chance to be locked
- Added helpful (or unhelpful) adventurer ghosts that may assist you with struggling. Careful not to rely on them too much as they might enjoy seeing you bound!
- New special pressure-plate traps (that are often the only way through if you dont have a key to unlock a door)
- Enemies now have pathfinding! They should be a bit harder to evade now.
- Some enemies now hunt along defined patrols rather than at random
- Enemies now have a 2 turn delay before they start chasing you
- Added grates you can squeeze through
- The player can now be dragged by enemies while wearing a leash
- New status effects: Freeze, slow, and bind. Chains, ice, slime, etc have been moved over

TODO (expecting to get this done soon):
-Dream hunter or something
-Add max SP, MP, and AP upgrades as a rare drop in chests
-Make it so rope snare can't target spaces with enemies
-Panel gag, Legbinder and bolero jacket restraints
-Latex goddess and restraints
-Shock plug that stuns you at high arousal
-View buffs/penalties as a 3rd option for the struggle display
-Aura spells that reduce max mana and mana regen
-Contract spells Attached to a restraint
-Etheral enemies
-Return items to inventory if they get replaced
-ESP spell that boosts vision range (or allows vision through walls in a short radius?) and reveals stealth

Other Features
- Knives now use the same random-number-of-uses mechanic as lockpicks which gives some guaranteed uses
- Picks, Knives, and Red Keys are now in the shop